<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.vs_vvenzin_webservices.RESTServerActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/ip_port_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_port_tag"
            android:textSize="15sp"
            android:paddingRight="30dp"/>
        <TextView
            android:id="@+id/ip_port_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_port_value"
            android:textSize="15sp"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/start_stop_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textOff="@string/start_server"
        android:textOn="@string/stop_server"
        android:layout_marginTop="20dp"/>

</LinearLayout>
