<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_task1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_task1"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_task2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_task2"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_task3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btn_task3"
            android:textSize="20sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"/>

</LinearLayout>